fix navbar flicker

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@ body, html{
     background-attachment: fixed;
 }
 
+.logo{
+    width: 150px;
+    height: 90px;
+    background-image: url(./logo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
 .Plaid button{
     background-color: black !important;
     border: 2px solid black !important;
